--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-hello
+<!DOCTYPE html>
+<!-- saved from url=(0025)https://www.hazel.net.cn/ -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Weather Forecast</title>
+<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="initial-scale=1.0">
+<style type="text/css">
+#splash {
+	position: absolute;
+	width: 90%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+#wallpaper {
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	opacity: 0.2;
+	background-image: url('img/la-wallpaper.jpg');
+	background-size: cover;
+}
+#stage {
+	height: 100%;
+	width: 100%;
+}
+body {
+	font-size: 1.5em;
+	text-align: center;
+}
+h4 {
+	text-transform: uppercase;
+}
+.logo {
+	
+	position: center;
+}
+</style>
+
+</head>
+<body>
+<div id="stage">
+	<!--<div class="logo"> <img id="sbox_logo" src="./Weather_Inc/weather-logo.png" height="280px"> </div>><-->
+	<h1>Weather Forecast</h1>
+<div id="splash">
+  
+    
+  
+  <center>
+    <br>
+    <br>
+    <div id="copyright" style="font-size:small;">Copyright © 2021 <b>Weather Forecast</b> <br>
+      All rights reserved.</div>
+  </center>
+</div>
+
+
+</div></body></html>
