--- a/index.html
+++ b/index.html
@@ -1,56 +1,33 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Weather Forecast</title>
-<meta name="viewport" content="width=device-width">
-<meta name="viewport" content="initial-scale=1.0">
-<style type="text/css">
-#splash {
-	position: absolute;
-	width: 90%;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-#wallpaper {
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	opacity: 0.2;
-	background-image: url('img/la-wallpaper.jpg');
-	background-size: cover;
-}
-#stage {
-	height: 100%;
-	width: 100%;
-}
-body {
-	font-size: 1.5em;
-	text-align: center;
-}
-h4 {
-	text-transform: uppercase;
-}
-.logo {
-	
-	position: center;
-}
-</style>
-
-</head>
-<body>
-<div id="stage">
-	<h1>Weather Forecast</h1>
-<div id="splash">
-  
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-  
-  <center>
-    <br>
-    <br>
-    <div id="copyright" style="font-size:small;">Copyright © 2022 <b>Weather Forecast</b> <br>
-      All rights reserved.</div>
-  </center>
-</div>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Forecast</title>
+    <link rel="stylesheet" type="text/css" href="./res_files/content.css">
+</head>
 
+<body _c_t_common="1" _c_t_j1="1">
+    <div class="box">
+        <div class="boxmin">
+            <div class="boxmine">
+                <div class="boxminee">
+                    <img src="./res_files/img1.png" alt="Weather Forecast" width="300px" height="300px">
+                </div>
+            </div>
+            <div class="boxminnes">
+                <h2 class="boxmins">
+                    Weather Forecast
+                </h2>
+                <p>
+                    Local weather forecast app, your personal 7*24 weather forecast assistant. <br> <b>by: FunnyCap</b>
+                </p>
+                <div class="boxminnee">
+                    <a href="https://play.google.com/store/apps/details?id=com.accu.live.weather.forecast"><img src="./res_files/btn.png">
 
-</div></body></html>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+    </html>
