--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     Weather Forecast
                 </h2>
                 <p>
-                    Local weather forecast app, your personal 7*24 weather forecast assistant. <br> <b>by: FunnyCap</b>
+                    Local weather forecast app,  accurate live weather forecasting app. <br> <b>by: FunnyCap</b>
                 </p>
                 <div class="boxminnee">
                     <a href="https://play.google.com/store/apps/details?id=com.accu.live.weather.forecast"><img src="./res_files/btn.png">
