update download url

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Local weather forecast app,  accurate live weather forecasting app. <br> <b>by: FunnyCap</b>
                 </p>
                 <div class="boxminnee">
-                    <a href="https://play.google.com/store/apps/details?id=com.accu.live.weather.forecast"><img src="./res_files/btn.png">
+                    <a href="https://play.google.com/store/apps/details?id=com.weather.live.forecast.widgetapp"><img src="./res_files/btn.png">
 
                     </a>
                 </div>
