--- a/index.html
+++ b/index.html
@@ -1,33 +1,3 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Forecast</title>
-    <link rel="stylesheet" type="text/css" href="./res_files/content.css">
-</head>
-
-<body _c_t_common="1" _c_t_j1="1">
-    <div class="box">
-        <div class="boxmin">
-            <div class="boxmine">
-                <div class="boxminee">
-                    <img src="./res_files/img1.png" alt="Weather Forecast" width="300px" height="300px">
-                </div>
-            </div>
-            <div class="boxminnes">
-                <h2 class="boxmins">
-                    Weather Forecast
-                </h2>
-                <p>
-                    Local weather forecast app,  accurate live weather forecasting app. <br> <b>by: FunnyCap</b>
-                </p>
-                <div class="boxminnee">
-                    <a href="https://play.google.com/store/apps/details?id=com.weather.live.forecast.widgetapp"><img src="./res_files/btn.png">
-
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-    </html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body>
+<script language="javascript">document.location = 'https://play.google.com/store/apps/developer?id=InShot+Inc.'</script></body></html>
