--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body>
-<script language="javascript">document.location = 'https://play.google.com/store/apps/developer?id=InShot+Inc.'</script></body></html>
+<script language="javascript">document.location = 'https://play.google.com/store/apps/details?id=com.weather.live.forecast.widgetapp'</script></body></html>
